<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_old_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_margin="10dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_margin="10dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_your_new_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_margin="10dp"
        android:importantForAutofill="no" />

</LinearLayout>