<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.login.LoginActivity"
        tools:ignore="LabelFor" >

        <ImageView
            android:id="@+id/login_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/login_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/destination" />

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="42sp"
            android:textColor="@color/main_blue"
            android:fontFamily="@font/inter_bold"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/login_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_login_to_continue"
            android:textSize="16sp"
            android:textColor="@color/main_blue"
            android:fontFamily="@font/inter_bold"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/login_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/login_info" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/main_blue"
                android:fontFamily="@font/inter_regular" />
            
            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_edit_text"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/inter_regular"
                android:paddingHorizontal="15dp"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/main_blue"
                android:fontFamily="@font/inter_regular"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_edit_text"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:fontFamily="@font/inter_regular"
                android:paddingHorizontal="15dp"
                android:layout_marginTop="2dp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/login_button_case"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="20dp"
            android:layout_marginBottom="50dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/ripple_background"
                android:background="@drawable/gate_button"
                android:backgroundTint="@color/main_blue"
                android:text="@string/login"
                android:textColor="@color/white"
                android:fontFamily="@font/inter_regular"
                android:textStyle="bold"
                android:textSize="12sp" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/login_button_case"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:fontFamily="@font/msplus_regular" />

            <TextView
                android:id="@+id/login_to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:fontFamily="@font/msplus_regular"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>