<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.gate.GateActivity" >

        <ImageView
            android:id="@+id/gate_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/gate_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/destination" />

        <TextView
            android:id="@+id/gate_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore_the_earth_with"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            android:layout_marginBottom="-10dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toTopOf="@id/gate_voyage"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/gate_voyage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voyage"
            android:textSize="42sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_bold"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toTopOf="@id/gate_line"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/gate_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/gate_line"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintBottom_toTopOf="@id/gate_join_button_case"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/destination" />

        <androidx.cardview.widget.CardView
            android:id="@+id/gate_join_button_case"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/gate_join_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/ripple_background"
                android:background="@drawable/gate_button"
                android:text="@string/join_now"
                android:fontFamily="@font/inter_regular"
                android:textStyle="bold"
                android:textSize="12sp" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>