<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.voyageteam.voyage.data.User" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ProfileActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_top_case"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:src="@drawable/profile_circle_bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/destination" />

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_picture_case"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:elevation="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/profile_picture"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        imageUrl='@{data.photo}'
                        android:scaleType="centerCrop"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:contentDescription="@string/destination" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/profile_picture_bg"
                        android:elevation="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:contentDescription="@string/destination" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/profile_picture_edit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/galeryedit"
                android:elevation="15dp"
                android:layout_marginTop="-40dp"
                android:layout_marginStart="-40dp"
                app:layout_constraintTop_toBottomOf="@id/profile_picture_case"
                app:layout_constraintStart_toEndOf="@id/profile_picture_case"
                android:contentDescription="@string/destination" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            android:text='@{data.name}'
            tools:text="@string/name"
            android:textSize="30sp"
            android:textColor="@color/main_blue"
            android:fontFamily="@font/inter_bold"
            android:layout_marginHorizontal="40dp"
            app:layout_constraintTop_toBottomOf="@id/profile_top_case"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:text='@{data.email}'
            tools:text="@string/name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_regular"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="60dp"
            app:layout_constraintTop_toBottomOf="@id/profile_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/email_line"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:src="@drawable/line"
            android:layout_marginTop="80dp"
            android:layout_marginHorizontal="80dp"
            app:layout_constraintTop_toBottomOf="@id/profile_top_case"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/destination" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_name_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center"
            android:foreground="@drawable/profile_picture_bg"
            android:background="@drawable/button_bg"
            android:text="@string/edit_profile_name"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            android:drawableEnd="@drawable/useredit"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="70dp"
            app:layout_constraintTop_toBottomOf="@id/email_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_password_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center"
            android:foreground="@drawable/profile_picture_bg"
            android:background="@drawable/button_bg"
            android:backgroundTint="@color/very_light_blue"
            android:text="@string/edit_password"
            android:textSize="16sp"
            android:textColor="@color/main_blue"
            android:fontFamily="@font/inter_regular"
            android:drawableEnd="@drawable/edit"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="85dp"
            app:layout_constraintTop_toBottomOf="@id/edit_name_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/password_line"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:src="@drawable/line"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="80dp"
            app:layout_constraintTop_toBottomOf="@id/edit_password_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/destination" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saved_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:background="@drawable/button_bg"
            android:backgroundTint="@color/text_green"
            android:text="@string/saved_destinations"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            android:drawableEnd="@drawable/arrow"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="70dp"
            app:layout_constraintTop_toBottomOf="@id/password_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:background="@drawable/button_bg"
            android:backgroundTint="@color/text_red"
            android:text="@string/logout"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            android:drawableEnd="@drawable/logout"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="115dp"
            app:layout_constraintTop_toBottomOf="@id/saved_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>